--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,11 @@
   padding: 20px;
   border: 5px dashed black;
 }
+
+.redBorder {
+  border: 5px solid red;
+}
+
+.bigText {
+  font-size: 1.5rem;
+}
